--- a/.github/workflows/push_to_ecr.yaml
+++ b/.github/workflows/push_to_ecr.yaml
@@ -35,10 +35,12 @@ jobs:
       - name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v2
+        working-directory: src
         
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
-        with:
+        working-directory: src
+        with:          
           context: ./src
           push: true
           tags: ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/mme2k-graphviz-api:latest
